[project]
name = "audio-tools"
version = "0.1.0"
description = "录音工具"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Uluoyu", email = "" },
]
dependencies = [
    "fastapi~=0.115.0",
    "jinja2~=3.1.4",
    "numpy~=2.1.1",
    "pyaudio~=0.2.14",
    "pydantic~=2.9.2",
    "python-multipart~=0.0.10",
    "uvicorn~=0.30.6",
]

# dev dependencies
[tool.uv]
extra-index-url = ["https://pypi.tuna.tsinghua.edu.cn/simple"]
dev-dependencies = [
    "pytest>=8.3.3,<9",
    "ruff>=0.6.6",
]

# ruff rules
[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "site-packages",
    "venv",
]
target-version = "py312"
src = ["app", "tests"]
line-length = 120
indent-width = 4

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# ruff lint
[tool.ruff.lint]
select = ["F", "E", "W", "N", "I", "ANN"]
ignore = ["E501", "ANN101", "ANN102", "ANN401"]

# ruff format
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
